<resources>
    <string name="common_accept">Accept</string>
    <string name="common_delete">Delete</string>
    <string name="common_content_description">Common Content Image Description</string>
    <string name="common_til_search">Search</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_cancelled">Cancelled</string>
    <string name="common_atention">Attention</string>
    <string name="common_close">Close</string>
    <string name="common_toast_fill_text">You have to fill all the fields!</string>
    <string name="ops_about_app_title">About OPS</string>
    <string name="ops_about_app_body">OPS is an application for the administration of markets and the activities that they entail such as collections, incidents, creation of markets, user registration, etc.
The OPS application is willing to help and provide a better experience to all users when it comes to collecting taxes.</string>
    <string name="ops_about_app_last_update">Last Update: December 19, 2022</string>
    <string name="tv_dealer_title">Your Profile</string>
    <string name="tv_prices_info_linear">linear meters</string>
    <string name="tv_prices_info_absence">absences</string>
    <string name="dialog_dealer_info_title">Are you sure you want to log out?</string>
    <string name="dialog_dealer_info_message">You will have to log in again</string>
    <string name="concessionaire_no_concess">No dealers listed</string>
    <string name="concessionaire_elimination_success">Deleted Successfully</string>
    <string name="concessionaire_pick_market">Select a Market</string>
    <string name="concessionaire_market_was_already_related">This market was recently related</string>
    <string name="concessionaire_cant_add_market">As error occurred while trying to add to the market</string>
    <string name="concessionaire_delete_relation">Delete relation</string>
    <string name="concessionaire_market_will_delete">The concessionaire will be deleted of this market</string>
    <string name="tax_collection_scan">Scan</string>
    <string name="tax_collection_dealer_name">Concessionaire Name</string>
    <string name="tax_collection_linear_meters">Linear Meters</string>
    <string name="tax_collection_line_of_business">Line of Business</string>
    <string name="tax_collection_total_amount">Total</string>
    <string name="tax_collection_finalize">Finalize</string>
    <string name="tax_collection_record">History</string>
    <string name="tax_collection_pick_market">Choose the market to collect</string>
    <string name="tax_collection_finalize_collection">Do you want to end the collection?</string>
    <string name="tax_collection_market">Markets</string>
    <string name="tax_collection_finalize_collection_title">Finishing Collection</string>
    <string name="tax_collection_sent">Sent</string>
    <string name="tax_collection_absence">Absences</string>
    <string name="tax_collection_send">Sent</string>
    <string name="tax_collection_crud_collections">collections</string>
    <string name="tax_collection_2_times">You cannot charge the same dealer twice</string>
    <string name="tax_collection_opened_collection">Do you have an open pickup\n¿Do you want to continue?\n\Note:\nYou cannot have two recollections open in the same market</string>
    <string name="tax_collection_error_persisting_concess">An error occurred while trying to save the concessionaires list</string>
    <string name="tax_collection_send_the_info">Send the actual information or delete it</string>
    <string name="tax_collection_concess_not_found">No concessionaires found in the list</string>
    <string name="tax_collection_wish_add_concess">The user is not registered in this flea market.\nDo you want to add it?</string>
    <string name="tax_collection_wish_add_concess_warning">The user is not registered in this flea market.</string>
    <string name="tax_collection_cant_add_market">An error occurred while trying to save the market</string>
    <string name="tax_collection_cant_save_info">An error occurred while trying to save the captured information</string>
    <string name="tax_collection_cant_revert">It could not revert the event</string>
    <string name="tax_collection_receipt_subject">Receipt %1$s</string>
    <string name="tax_collection_unknow_event">Unknown Event</string>
    <string name="tax_collection_error_saving_info_market">An error occurred while trying to sava the information of the selected market</string>
    <string name="tax_collection_delete_collection">There aren\'t events for processing.\nDo yo want to delete  the recollection?</string>
    <string name="tax_collection_collection_deleted">Recollection Deleted</string>
    <string name="tax_collection_limit_absences_reached">The dealership reached the monthly no-show limit.\nDo you want to continue with your flat collection?</string>
    <string name="tax_collection_receipt">Good Day, %1$s \n\nWe send you your payment receipt where we remember the following information:\n\nMarket: %2$s \nLinear meters collected: %3$s
        \nTotal: %4$s \nCharged you: %5$s \n\nIf the information submitted is incorrect, please inform the collectors as soon as possible.\n\nThis email with the invoice has been sent automatically. Any email sent to this same address will not be answered.</string>
    <string name="tax_collection_absence_email">Good afternoon, %1$s \n\nWe send you your absence report where we remember the following information:\n\nMarket: %2$s \nReport: %3$s
        \n\nIf the information submitted is incorrect, please inform the collectors as soon as possible.\n\nThis email with the invoice has been sent automatically. Any email sent to this same address will not be answered.</string>
    <string name="tax_collection_crud_btn_add">Add</string>
    <string name="tax_collection_crud_second_text">%1$s, %1$s meters</string>
    <string name="bottom_sheet_tv_filter">Filter</string>
    <string name="bottom_sheet_tv_collector">Collector</string>
    <string name="dashboard_analytics">Analytics</string>
    <string name="dashboard_weekly">Weekly</string>
    <string name="dashboard_monthly">Monthly</string>
    <string name="dashboard_daily">Daily</string>
    <string name="dashboard_user_profile">User profile</string>
    <string name="dashboard_arrow">Arrow</string>
    <string name="dashboard_chart">Statistical Graph</string>
    <string name="dashboard_penalty_fee">Fines</string>
    <string name="dashboard_absences">Absences</string>
    <string name="dashboard_active_dealers">Active dealers</string>
    <string name="dashboard_tax_collections">Collections</string>
    <string name="btn_print_qr_code">Print my QR code</string>
    <string name="dashboard_fab_history">History</string>
    <string name="dashboard_fab_recollection">New Collection</string>
    <string name="dashboard_tv_analytics_name">Hi, %1$s</string>
    <string name="dashboard_tv_analytics_second_text">Here are yours analytics!</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_til_required">Required</string>
    <string name="login_btn">Login</string>
    <string name="login_txt_create_account">Don\'t have an account?</string>
    <string name="login_txt_create_account_sign_in">Sign up</string>
    <string name="login_sw_remember_account">Remember me</string>
    <string name="login_tv_title_bottom_sheet">Are you sure you want to get out of OPS?</string>
    <string name="login_btn_close_bottom_sheet">Close app</string>
    <string name="login_tv_about_app">About App</string>
    <string name="login_tv_policies">Policies</string>
    <string name="login_toast_empy_text">Fields cannot be empty</string>
    <string name="login_tv_forget_password">I forgot my password</string>
    <string name="login_toast_credentials_validation">The password or the email is incorrect, check it!</string>
    <string name="login_tv_remember_name">Welcome Back, %1$s!</string>
    <string name="login_access_denied">You are not currently allowed to login</string>
    <string name="login_biometrics_permission">Do you want to use your biometric data to login?</string>
    <string name="login_new_version">New version available.\nPlease, update the app</string>
    <string name="registration_hint_username">Name(s)</string>
    <string name="registration_hint_lastname">Last Name(s)</string>
    <string name="registration_hint_address">Address</string>
    <string name="registration_hint_phone">Phone</string>
    <string name="registration_hint_email">Email</string>
    <string name="registration_hint_pass_confirm">Confirm password</string>
    <string name="registration_hint_origin">Residence Municipality</string>
    <string name="registration_btn_exit">Go Login</string>
    <string name="registration_tv_success">You have successfully registered!</string>
    <string name="registration_tv_error">Oops it looks like there was an error making your registration!</string>
    <string name="registration_btn_bs_close">Exit</string>
    <string name="registration_tv_bs_close">Are you sure you want to exit this screen?</string>
    <string name="dealer_show_qr">Show QR Code</string>
    <string name="description_record_icon">Event Icon</string>
    <string name="registration_alert_dialog_title">How do you want to register?</string>
    <string name="registration_alert_dialog_negative_button">Return to Login</string>
    <string name="registration_btn_complete_register">Complete Sign In</string>
    <string name="registration_tv_steps_title">Complete all steps to complete your register to become a %1$s!</string>
    <string name="registration_array_foreign_conce">Foreign dealer</string>
    <string name="registration_array_conce">Concessionaire</string>
    <string name="registration_array_collector">Collector</string>
    <string name="registration_toast_fields_validation">You must fill in all the fields!</string>
    <string name="registration_toast_password_validation">Passwords do not match, verify that they are the same!</string>
    <string name="registration_toast_email_validation">Invalid email!</string>
    <string name="registration_toast_password_exist_validation">Oops, looks like we already have this email registered. Try another one!</string>
    <string name="registration_til_password_validation">The password must be at least 8 characters including an uppercase letter, a number and a special character</string>
    <string name="registration_checkbox_accept_policies">Accept privacy policies</string>
    <string name="registration_toast_password_regex_validation">Oops, it looks like the password doesn\'t meet the requirements!</string>
    <string name="registration_toast_policies_validation">Before you must accept our privacy policies!</string>
    <string name="registration_see_policies_validation">Tap to see Privacy Policies!</string>
    <string name="registration_updated_market_success">The Market list has been updated!</string>
    <string name="bn_menu_market_opc1">Market</string>
    <string name="bn_menu_concessionaire_opc2">Concessionaire</string>
    <string name="bn_menu_tax_collection_opc3">Tax</string>
    <string name="bn_menu_incidents_opc5">Incidents</string>
    <string name="bottom_sheet_conce_tv_title">Concessionaires List</string>
    <string name="bottom_sheet_conce_btn_delete">Delete concessionaire</string>
    <string name="bottom_sheet_conce_btn_see">See concessionaire</string>
    <string name="bottom_sheet_conce_hint_til">Concessionaire Name</string>
    <string name="bottom_sheet_tv_title">Assign a new Issue</string>
    <string name="bottom_sheet_btn_create_inc">Create Incident</string>
    <string name="bottom_sheet_til_hint_inc_name">Name Incident</string>
    <string name="bottom_sheet_til_hint_inc_price">Price Incident</string>
</resources>