<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/common_padding_min">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/bottom_sheet_conce_hint_til"
        app:startIconDrawable="@drawable/ic_ops_user"
        app:boxStrokeColor="@drawable/states_colors_text_field"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteConcess"
        app:layout_constraintEnd_toEndOf="@+id/btnDeleteConcess"
        app:layout_constraintStart_toStartOf="@+id/btnDeleteConcess"
        style="@style/TextInputDropDownLayoutStyle">
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/acUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBSTitle"
        style="@style/textViewTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/bottom_sheet_conce_tv_title"
        app:layout_constraintBottom_toTopOf="@+id/tilLoginEmail"
        app:layout_constraintEnd_toEndOf="@+id/tilLoginEmail"
        app:layout_constraintStart_toStartOf="@+id/tilLoginEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteConcess"
        style="@style/CommonButtonStyle"
        android:layout_width="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bottom_sheet_conce_btn_delete"
        app:icon="@drawable/ic_absence"
        app:layout_constraintBottom_toTopOf="@+id/btnGoConcess"
        app:layout_constraintEnd_toEndOf="@+id/btnGoConcess"
        app:layout_constraintStart_toStartOf="@+id/btnGoConcess" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoConcess"
        style="@style/CommonButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bottom_sheet_conce_btn_see"
        app:icon="@drawable/ic_ops_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>