<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".flows.sign_on.taxCollectionModule.view.TaxCollectionActivity">

    <ImageView
        android:id="@+id/chartTaxMoney"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_min"
        android:src="@drawable/ic_query_stats"
        android:contentDescription="@string/dashboard_chart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnScan"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/tax_collection_scan"
        android:fontFamily="@font/montserrat_semibold"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_camera_shutter"
        app:iconPadding="-20dp"
        app:iconSize="@dimen/common_icon_size"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_large"
        app:layout_constraintTop_toBottomOf="@id/chartTaxMoney"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDealerName"
        style="@style/WhiteTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tax_collection_dealer_name"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        android:layout_marginTop="@dimen/common_padding_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnScan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDealerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mario Armando Razo Valenzuela"
            android:textColor="@color/primaryTextColor"
            android:backgroundTint="@color/primaryLightColor"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLinearMeters"
        style="@style/WhiteTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_min"
        android:hint="@string/tax_collection_linear_meters"
        app:layout_constraintEnd_toStartOf="@+id/tilLineOfBusiness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilDealerName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLinearMeters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryLightColor"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:text="5 Metros" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLineOfBusiness"
        style="@style/WhiteTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:layout_marginStart="@dimen/common_padding_min"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/tax_collection_line_of_business"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tilLinearMeters"
        app:layout_constraintTop_toBottomOf="@id/tilDealerName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLineOfBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryLightColor"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:text="Verdulería" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTotalAmount"
        style="@style/WhiteTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/tax_collection_total_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilLinearMeters">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTotalAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/primaryLightColor"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="@dimen/title"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:text="$42" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinalize"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/tax_collection_finalize"
        android:fontFamily="@font/montserrat_semibold"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_tax_colletion"
        app:iconSize="@dimen/common_icon_size"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:layout_marginBottom="@dimen/common_padding_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:layout_marginStart="@dimen/common_padding_default"
        android:contentDescription="@string/tax_collection_record"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_record"
        app:tint="@android:color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>